--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World!
+<html>
+  <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKQV82PS1J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EKQV82PS1J');
+  </script>
+  </head>
+  <body>
+    Hello World!
+  </body>
+</html>
