--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     Hello World!
+    <button href="https://oliverkill.github.io/inverted.html">Invert</button>
   </body>
 </html>
