--- a/inverted.html
+++ b/inverted.html
@@ -1,2 +1,17 @@
-!blɿoW ollǝH
-<button href="https://oliverkill.github.io">ɈɿǝvnI</button>
+<html>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NVTNN3PMKC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-NVTNN3PMKC');
+    </script>
+  </head>
+  <body>
+    !blɿoW ollǝH
+    <button href="https://oliverkill.github.io">ɈɿǝvnI</button>
+  </body>
+</html>
