--- a/inverted.html
+++ b/inverted.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     !blɿoW ollǝH
-    <button href="https://oliverkill.github.io">ɈɿǝvnI</button>
+    <a href="https://oliverkill.github.io">ɈɿǝvnI</a>
   </body>
 </html>
