--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     Hello World!
-    <button href="https://oliverkill.github.io/inverted.html">Invert</button>
+    <a href="https://oliverkill.github.io/inverted.html">Invert</a>
   </body>
 </html>
